# computer-vision-programming-examples

./: README.md
Learning.OpenCV/: README  build_aarch64_gcc8.2.sh
Learning.OpenCV/ch02/: CMakeLists.txt  build.sh  build_msys.sh  example_02-01.cpp  example_02-02.cpp  example_02-03.cpp  example_02-04.cpp  example_02-05.cpp  example_02-06.cpp  example_02-07.cpp  example_02-08.cpp  example_02-09.cpp  example_02-10.cpp  example_02-11.cpp  test_02-01.sh  test_02-02.sh  test_02-03.sh  test_02-04.sh  test_02-05.sh  test_02-06.sh  test_02-07.sh  test_02-08.sh  test_02-09.sh  test_02-10.sh  test_02-11.sh
Learning.OpenCV/ch04/: CMakeLists.txt  Makefile  example_04-03.cpp
Learning.OpenCV/ch05/: CMakeLists.txt
Learning.OpenCV/mat/: CMakeLists.txt  mat_attributes_01.cpp  mat_divide.cpp  mat_foreach_01.cpp  mat_foreach_02.cpp  mat_get_type.cpp  mat_sum.cpp
OpenCV.Algorithmic.Solution/: README.md
OpenCV.Algorithmic.Solution/chapter-01/1.2.2/: firstOpenCV2.cpp
OpenCV.Algorithmic.Solution/chapter-01/1.2.3/: firstOpenCV3.cpp
OpenCV.Algorithmic.Solution/chapter-01/1.2.6/: firstOpenCV3.py
OpenCV.Algorithmic.Solution/chapter-02/2.1.1/: example1.py  example2.py  example3.py
OpenCV.Algorithmic.Solution/chapter-02/2.1.2/: example1.py  example2.py
OpenCV.Algorithmic.Solution/chapter-02/2.2.2/: example1.cpp  example2.cpp
OpenCV.Algorithmic.Solution/chapter-02/2.2.3/: Makefile  example1.cpp  example2.cpp
OpenCV.Algorithmic.Solution/chapter-02/2.2.4/: example1.cpp  example2.cpp  example3.cpp  example4.cpp
OpenCV.Algorithmic.Solution/chapter-02/2.2.5/: example1.cpp
OpenCV.Algorithmic.Solution/chapter-02/2.2.6/: example1.cpp
OpenCV.Algorithmic.Solution/chapter-02/2.2.7/: example1.cpp  example2.cpp  example3.cpp  example4.cpp  example5.cpp  example6.cpp
OpenCV.Algorithmic.Solution/chapter-02/2.2.8/: example1.cpp  example2.cpp  example3.cpp  example4.cpp
OpenCV.Algorithmic.Solution/chapter-02/2.3.1/: example1.cpp  example1.py  example2.py  example3.py
OpenCV.Algorithmic.Solution/chapter-02/2.3.2/: example1.cpp  example1.py  example2.py  example3.py
OpenCV.Algorithmic.Solution/chapter-02/2.3.3/: example1.cpp  example1.py  example2.cpp  example2.py  example3.py
OpenCV.Algorithmic.Solution/chapter-02/2.3.4/: example1.cpp  example1.py  example2.cpp  example2.py  example3.py
OpenCV.Algorithmic.Solution/chapter-02/2.3.5/: example1.cpp  example1.py  example2.cpp  example3.cpp
OpenCV.Algorithmic.Solution/chapter-02/2.3.6/: example1.cpp  example1.py  example2.cpp  example2.py
OpenCV.Algorithmic.Solution/chapter-02/2.4/: imgToArray.cpp  imgToArray.py
OpenCV.Algorithmic.Solution/chapter-02/2.5/: RGB.cpp  RGB.py  build.sh
OpenCV.Algorithmic.Solution/chapter-03/3.1.4/: example1.cpp  example1.py  example2.cpp  example2.py  example3.cpp  example3.py
OpenCV.Algorithmic.Solution/chapter-03/3.1.6-3.1.7/: warpAffine.cpp  warpAffine.py
OpenCV.Algorithmic.Solution/chapter-03/3.1.8/: rotate_OpenCV3.cpp  rotate_OpenCV3.py
OpenCV.Algorithmic.Solution/chapter-03/3.2.1/: example1.cpp  example1.py
OpenCV.Algorithmic.Solution/chapter-03/3.2.2-3.2.3/: perspective.cpp  perspective.py
OpenCV.Algorithmic.Solution/chapter-03/3.3.1/: example1.cpp  example1.py  example2.cpp  example2.py  example3.cpp  example3.py
OpenCV.Algorithmic.Solution/chapter-03/3.3.2-3.3.3/: Polar.cpp  Polar.py  example1.cpp  example1.py
OpenCV.Algorithmic.Solution/chapter-03/3.3.4/: linearPolar_OpenCV3.cpp  linearPolar_OpenCV3.py
OpenCV.Algorithmic.Solution/chapter-03/3.3.5/: logPolar.py  logPolar_OpenCV3.cpp
OpenCV.Algorithmic.Solution/chapter-04/4.1.2/: histogram1.py  histogram2.py
OpenCV.Algorithmic.Solution/chapter-04/4.2/: line.cpp  line.py  line0.py  line2.py
OpenCV.Algorithmic.Solution/chapter-04/4.3/: histNormalized.cpp  histNormalized.py  histNormalized0.py  normalize.cpp  normalize.py  normalize_opencv.cpp
OpenCV.Algorithmic.Solution/chapter-04/4.4/: Makefile  gamma.cpp  gamma.py  gamma0.py  test.sh
OpenCV.Algorithmic.Solution/chapter-04/4.5/: equalHist.cpp  equalHist.py  histequlization_opencv.cpp  test.sh
OpenCV.Algorithmic.Solution/chapter-04/4.6/: CLAHE.cpp  CLAHE.py  test.sh
OpenCV.Algorithmic.Solution/mat/: mat_count_no_zero.cpp  mat_foreach_03.cpp  mat_mean.cpp  mat_mean2.cpp  mat_resize.cpp  rng_fill_01.cpp
OpenCV.Algorithmic.Solution/origin/第10章：傅里叶变换/10.1/: fft2.cpp  fft2.py
OpenCV.Algorithmic.Solution/origin/第10章：傅里叶变换/10.2/: spectrum.cpp  spectrum.py
OpenCV.Algorithmic.Solution/origin/第10章：傅里叶变换/10.3/: saliencyMap.cpp  saliencyMap.py
OpenCV.Algorithmic.Solution/origin/第10章：傅里叶变换/10.4/: fft2Conv.py
OpenCV.Algorithmic.Solution/origin/第10章：傅里叶变换/10.5/: fft2toConv.cpp  fft2toConv.py
OpenCV.Algorithmic.Solution/origin/第11章：频率域滤波/11.2/: LPFilter.cpp  LPFilter.py
OpenCV.Algorithmic.Solution/origin/第11章：频率域滤波/11.3/: bpFilter.cpp  brFilter.cpp  ihpFilter.cpp
OpenCV.Algorithmic.Solution/origin/第11章：频率域滤波/11.4/: structrueNoise.cpp
OpenCV.Algorithmic.Solution/origin/第11章：频率域滤波/11.5/: HomomorphicFilter.py
OpenCV.Algorithmic.Solution/origin/第12章：色彩空间/: HLS.cpp  HLS.py  HSV.cpp  RGB.py
OpenCV.Algorithmic.Solution/origin/第3章：空间变换/3.1.6-3.1.6-仿射变换/: warpAffine.cpp  warpAffine.py
OpenCV.Algorithmic.Solution/origin/第3章：空间变换/3.1.8-旋转函数rotate/: rotate_OpenCV3.cpp  rotate_OpenCV3.py
OpenCV.Algorithmic.Solution/origin/第3章：空间变换/3.2-投影变换/: perspective.cpp  perspective.py
OpenCV.Algorithmic.Solution/origin/第3章：空间变换/3.3-极坐标变换/: Polar.cpp  (+5 more)
OpenCV.Algorithmic.Solution/script/: build_opencv2.sh  build_opencv3.sh
OpenCV.By.Example/chapter_02/: CMakeLists.txt  main.cpp
OpenCV.By.Example/chapter_03/: CMakeLists.txt  sample5.cpp
OpenCV.By.Example/chapter_04/: CMakeLists.txt
OpenCV.By.Example/chapter_05/: CMakeLists.txt
OpenCV.By.Example/chapter_06/: CMakeLists.txt  main.cpp
OpenCV3.Cookbook/: README.md
OpenCV3.Cookbook/src/Chapter01/: CMakeLists.txt  mat.cpp
OpenCV3.Cookbook/src/Chapter02/: CMakeLists.txt
OpenCV3.Cookbook/src/Chapter03/: CMakeLists.txt  colorDetection.cpp  colordetector.h  huesaturation.cpp
Programming.Computer.Vision.With.Python/: README.md
(+236 files in other folders)
